2017-06-19  Joseph Pecoraro  <pecoraro@apple.com>

        test262: Completion values for control flow do not match the spec
        https://bugs.webkit.org/show_bug.cgi?id=171265

        Reviewed by Saam Barati.

        * Scripts/run-jsc-stress-tests:
        Include a :failDueToOutdatedOrBadTest to mark failures with justification.

2017-06-19  Zalan Bujtas  <zalan@apple.com>

        Opening certain mails brings up a mail that grows indefinitely.
        https://bugs.webkit.org/show_bug.cgi?id=173562
        <rdar://problem/32766579>

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebKit2Cocoa/AutoLayoutIntegration.mm:
        (TEST):

2017-06-19  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS DnD] Support .zip archives for file uploads via drag and drop
        https://bugs.webkit.org/show_bug.cgi?id=173511
        <rdar://problem/32521025>

        Reviewed by Tim Horton.

        Adds tests for dropping .zip archives into a JavaScript-based file upload area, as well as into a file input.
        Also verifies that URLs are not handled as file drops. See WebCore ChangeLog for more details.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2Cocoa/compressed-files.zip: Added.
        * TestWebKitAPI/Tests/ios/DataInteractionTests.mm:
        (testZIPArchive):
        (TestWebKitAPI::TEST):

2017-06-18  Darin Adler  <darin@apple.com>

        Fix Ref to deref before assignment, add tests for this to RefPtr, Ref, Function
        https://bugs.webkit.org/show_bug.cgi?id=173526

        Reviewed by Sam Weinig.

        * TestWebKitAPI/CMakeLists.txt: Added Function.cpp.
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Ditto.

        * TestWebKitAPI/Tests/WTF/Function.cpp: Added. Contains basic tests and some
        tests for assignment before destruction ones.

        * TestWebKitAPI/Tests/WTF/MoveOnly.h: Added a () operator so this can be used