@@ -1,3 +1,9 @@
+2017-06-19  Guillaume Emont  <guijemont@igalia.com>
+
+        Unreviewed, adding myself to contributors.json
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2017-06-19  Joseph Pecoraro  <pecoraro@apple.com>
 
         test262: Completion values for control flow do not match the spec
